# Luandroid

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/app/zhix/luandroid/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: luajit.c  luajit.h
app/src/main/java/app/zhix/luandroid/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/app/zhix/luandroid/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
